# fuzmon

./: AGENTS.md  Cargo.toml  README.md  trace_viewer_full.html
.github/workflows/: ci.yml
ai_docs/: DESIGN.md  README.md  example_config.toml
examples/: daemon.toml
src/: config.rs  dump.rs  log.rs  main.rs  procinfo.rs  report.rs  run.rs  stacktrace.rs  test_utils.rs  utils.rs
tests/: cli.rs  common.rs  compression.rs  fd_events.rs  metadata.rs  multi_thread.rs  nonexistent_pid.rs  output_format.rs  pid_exit.rs  python_stack.rs  report.rs  run_command.rs  spawn_failure.rs  symbols.rs
