[package]
name = "fuzmon"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
nix = { version = "0.28", features = ["ptrace", "process"] }
addr2line = "0.25"
object = "0.37"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
py-spy = { version = "0.4", default-features = false }
rmp-serde = "1"
chrono = { version = "0.4", features = ["clock"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
zstd = "0.13"
log = "0.4"
env_logger = "0.10"
ctrlc = "3"
tempfile = "3"
num_cpus = "1"
